<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/bg_grey">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:weightSum="80">

		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="20"/>

		<ImageView
			android:id="@+id/splashscreen"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:layout_gravity="center"
			android:src="@mipmap/ic_logo_colors"/>

		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="20" />

		<TextView
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/landingpage_headline"
			android:textColor="@color/c_white"
			android:textStyle="bold"
			android:textAlignment="center"
			android:textSize="22sp" />

		<TextView
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="15dp"
			android:text="@string/landingpage_introduction"
			android:textColor="@color/c_white"
			android:textAlignment="center"
			android:textSize="14sp" />

		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="20" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/createaddress"
			android:textColor="@color/c_lighter"
			android:textAlignment="center"
			android:textSize="18sp" />

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="60dp"
			android:layout_marginTop="15dp"
			android:gravity="center">

			<android.support.design.button.MaterialButton
				android:id="@+id/btnGUIwallet"
				android:layout_width="110dp"
				android:layout_height="55dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:backgroundTint="@color/bg_blue"
				android:text="GUI"
				android:textSize="14sp"
				android:textAllCaps="false"
				android:textColor="@color/c_white"
				app:cornerRadius="25dp"
				app:iconPadding="0dp"
				app:icon="@drawable/ic_gui_wallet"/>

			<android.support.design.button.MaterialButton
				android:id="@+id/btnCLIwallet"
				android:layout_width="110dp"
				android:layout_height="55dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:backgroundTint="@color/bg_blue"
				android:text="CLI"
				android:textSize="14sp"
				android:textAllCaps="false"
				android:textColor="@color/c_white"
				app:cornerRadius="25dp"
				app:iconPadding="0dp"
				app:icon="@drawable/ic_cli_wallet"/>

			<android.support.design.button.MaterialButton
				android:id="@+id/btnPaperWallet"
				android:layout_width="110dp"
				android:layout_height="55dp"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:backgroundTint="@color/bg_blue"
				android:text="@string/paper"
				android:textSize="14sp"
				android:textAllCaps="false"
				android:textColor="@color/c_white"
				app:cornerRadius="25dp"
				app:iconPadding="0dp"
				app:icon="@drawable/ic_paper_wallet"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:gravity="center">

			<View
				android:layout_width="100dp"
				android:layout_height="0.5dp"
				android:background="@color/c_lighter" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"
				android:layout_marginRight="15dp"
				android:layout_gravity="center"
				android:text="@string/or"
				android:textColor="@color/c_lighter"
				android:textAlignment="center"
				android:textAllCaps="true"
				android:textSize="18sp" />

			<View
				android:layout_width="100dp"
				android:layout_height="0.5dp"
				android:background="@color/c_lighter" />

		</LinearLayout>

		<TextView
			android:id="@+id/skip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="15dp"
			android:text="@string/skip"
			android:textColor="@color/c_blue"
			android:textAlignment="center"
			android:textSize="22sp"
			android:onClick="onSkip"
			android:clickable="true"
			android:focusable="true" />

		<TextView
			android:id="@+id/disclaimer"
			android:layout_width="350dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="25dp"
			android:text="@string/disclaimer_agreement"
			android:textColor="@color/c_lighter"
			android:textAlignment="center"
			android:textSize="14sp" />

	</LinearLayout>

</RelativeLayout>