<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_body"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="15dip"
                android:gravity="start"
                android:text="@string/disclaimer"
                android:textColor="@color/txt_headline"
                android:textStyle="bold"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:textColor="@color/txt_main"
                android:textSize="14sp"
                android:text="@string/disclaimerText" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btnAgree"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                app:backgroundTint="@color/c_blue"
                android:text="@string/ok"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@color/txt_button_filled"
                app:cornerRadius="7.5dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>