<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_body"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginStart="15dip"
                android:gravity="start"
                android:text="@string/confirmstartmining"
                android:textColor="@color/txt_headline"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:textColor="@color/txt_main"
                android:textSize="14sp"
                android:text="@string/deviceonbattery" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/btnStopMiningNo"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    app:backgroundTint="@android:color/transparent"
                    app:strokeColor="@color/c_grey"
                    app:strokeWidth="1dp"
                    android:text="@string/no"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_button_outlined"
                    app:icon="@drawable/ic_no"
                    app:iconTint="@color/c_red"
                    app:cornerRadius="5dp" />

                <Button
                    android:id="@+id/btnStopMiningYes"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    app:backgroundTint="@color/bg_green"
                    android:text="@string/yes"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_button_filled"
                    app:icon="@drawable/ic_ok"
                    app:iconTint="@color/btn_icon_default"
                    app:iconSize="18dp"
                    app:cornerRadius="5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>